# blueprints

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  style_notes.md
glad/src/: glad.c
resources/shader/: basic_fragment.glsl  basic_vertex.glsl  font.frag  font.vert  geometry_test.geom  geometry_test.vert  polygon.frag  polygon.geom  polygon.vert  quad.frag  quad.vert
resources/shader/instanced/: font.frag  font.vert  quad.frag  quad.vert
src/: Editor.cpp  Editor.h  Window.cpp  Window.h  WindowEventReceiver.cpp  WindowEventReceiver.h  editor.cpp  editor.h  main.cpp  shader.cpp  shader.h  window.cpp  window.h
src/component/: Button.cpp  Button.h  Component.h  HBox.cpp  HBox.h  ParentComponent.h  StaticRectangle.h  Text.cpp  Text.h  style.h
src/component/instanced/: IComponent.cpp  IComponent.h  IParentComponent.h  IRectComponent.cpp  IRectComponent.h
src/event/: ApplicationEvent.h  Event.h  EventBus.cpp  EventBus.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
src/input/: Keyboard.h  Mouse.cpp  Mouse.h
src/render/: FontHelper.cpp  FontHelper.h  FontRenderer.cpp  FontRenderer.h  QuadRenderer.cpp  QuadRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TestRenderer.cpp  TestRenderer.h  Viewport.cpp  Viewport.h  entity.cpp  entity.h  renderer.cpp  renderer.h
src/render/font/: GuillotinePack.h  README.md
src/render/instanced/: InstancedObject.h  InstancedQuad.cpp  InstancedQuad.h  InstancedQuadRenderer.cpp  InstancedQuadRenderer.h  InstancedRenderer.cpp  InstancedRenderer.h
src/render/opengl/: Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/shader/: basic_fragment.glsl  basic_vertex.glsl  font.vert
